--- a/public_src/components/app/app.component.html
+++ b/public_src/components/app/app.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
-            <li><a href="https://github.com/haoliangyu/ngx-leaflet-starter" target="_blank">Add support us link</a></li>
+            <li><a href="https://github.com/haoliangyu/ngx-leaflet-starter" target="_blank">Hold "Ctrl" button to select an area</a></li>
         </ul>
     </div>
 </nav>
