--- a/public_src/components/navigator/navigator.component.less
+++ b/public_src/components/navigator/navigator.component.less
@@ -1,7 +1,7 @@
 @import '../../styles/main.less';
 
 input {
-    margin: 20px 0 0 20px;
+    //margin: 20px 0 0 20px;
     width: 300px;
     height: 35px;
     border: 2px solid rgba(77, 156, 237, 0.7);
